# lld-study

./: .gitignore  README.md  go.mod  main.go  pyproject.toml
00-foundations/design-patterns/: README.md
01-easy/coffee-vending-machine/: class-diagram.mmd  problem.md
01-easy/logging-framework/: class-diagram.mmd  problem.md
01-easy/parking-lot/: class-diagram.mmd  problem.md
01-easy/stack-overflow/: class-diagram.mmd  problem.md
01-easy/task-management-system/: class-diagram.mmd  problem.md
01-easy/traffic-signal/: class-diagram.mmd  problem.md
01-easy/vending-machine/: class-diagram.mmd  problem.md
02-medium/airline-management-system/: class-diagram.mmd  problem.md
02-medium/atm/: class-diagram.mmd  problem.md
02-medium/car-rental-system/: class-diagram.mmd  problem.md
02-medium/concert-ticket-booking-system/: class-diagram.mmd  problem.md
02-medium/digital-wallet-service/: class-diagram.mmd  problem.md
02-medium/elevator-system/: class-diagram.mmd  problem.md
02-medium/hotel-management-system/: class-diagram.mmd  problem.md
02-medium/library-management-system/: class-diagram.mmd  problem.md
02-medium/linkedin/: class-diagram.mmd  problem.md
02-medium/lru-cache/: class-diagram.mmd  problem.md
02-medium/online-auction-system/: class-diagram.mmd  problem.md
02-medium/pub-sub-system/: class-diagram.mmd  problem.md
02-medium/restaurant-management-system/: class-diagram.mmd  problem.md
02-medium/social-networking-service/: class-diagram.mmd  problem.md
docs/: MODERNIZATION.md
tools/: README.md  check.sh  pytest_topics.sh
(+336 files in other folders)
